--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "mern-project",
+  "name": "lesson_08",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "techNotes MERN Project",
+  "main": "server.js",
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
   },
   "keywords": [],
-  "author": "Jeremiah Sabino",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "date-fns": "^3.3.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "date-fns": "^2.29.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0",
-    "mongoose-sequence": "^6.0.1",
-    "uuid": "^9.0.1"
+    "express-rate-limit": "^6.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
+    "mongoose-sequence": "^5.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^2.0.19"
   }
 }
