--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.5.1",
     "jsonwebtoken": "^8.5.1",
